stub for att csr

--- a/src/assets/work-templates/vox-global-att-csr.html
+++ b/src/assets/work-templates/vox-global-att-csr.html
@@ -2,14 +2,14 @@
   <div class="work-intro">
     <div class="work-header">
       <h1 class="work-title">
-        A CSR Website for AT&T
+        Redesigning AT&T CSR's Brand & Website
       </h1>
 
       <div class="work-title-border"></div>
 
       <div class="work-subtitle">
-        Revamping the way AT&T uses storytelling and blogging to share their
-        corporate & social responsibility campaigns.
+        Revamping the way AT&T presents their brand and uses storytelling to share their
+        corporate & social responsibility campaigns
       </div>
     </div>
 
@@ -24,7 +24,10 @@
 
     <div class="work-description">
       <p>
-        AT&T
+        From 2014-2015, I worked with AT&T to redesign their CSR brand and
+        reconsider the way they use blogging and social media to share their
+        stories. This was a project that I helped lead with our creative and
+        engineering directors.
       </p>
     </div>
 
@@ -36,7 +39,11 @@
     </h2>
 
     <p>
-      AT&T
+      The initiative emerged in collaboration with our client stakeholders at AT&T.
+      They were internally reviewing their CSR brand and direction. Over the past
+      four years, we had helped them become one of the most revered CSR brands in
+      the Fortune 100. They wanted to capitalize on that success, and we collaborated
+      with them to revamp their CSR identity.
     </p>
 
   </div>
