--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
     gtag('config', 'UA-115313317-1');
   </script>
+  <!-- Vimeo Embeds -->
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <meta charset="utf-8">
   <title>Peter Cutler</title>
   <base href="/">
