--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Vimeo Embeds -->
+  <!-- Vimeo -->
   <script src="https://player.vimeo.com/api/player.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115313317-1"></script>
@@ -12,6 +12,7 @@
 
     gtag('config', 'UA-115313317-1');
   </script>
+  <!-- Standard -->
   <meta charset="utf-8">
   <title>Peter Cutler</title>
   <base href="/">
