--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 <head>
   <!-- Vimeo -->
   <script src="https://player.vimeo.com/api/player.js"></script>
+  <!-- RunKit -->
+  <script src="https://embed.runkit.com"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115313317-1"></script>
   <script>
