updates for mosaic

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Load variables -->
+  <script src="env.js"></script>
   <!-- Vimeo -->
   <script src="https://player.vimeo.com/api/player.js"></script>
   <!-- RunKit -->
